--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.4",
     "prisma": "^4.0.0",
     "ts-node": "^10.9.1",
