chore: configuring for heroku deploy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projeto19-drivenpass",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
     "dev": "npx nodemon src/app.ts",
