--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "projeto19-drivenpass",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "dist/src/app.js",
   "type": "module",
   "scripts": {
     "dev": "npx nodemon src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/src/app.js"
   },
   "keywords": [],
   "author": "",
