--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "typescript": "^4.7.4",
     "tsc": "^2.0.4"
   },
   "devDependencies": {
