chore: added configuration for herokou-cli deploy with prisma

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx nodemon src/app.ts",
-    "build": "tsc",
+    "build": "tsc && prisma generate",
     "start": "node dist/src/app.js"
   },
   "keywords": [],
