--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "projeto19-drivenpass",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/app.js",
+  "main": "dist/app.js",
   "type": "module",
   "scripts": {
+    "prisma-dev-migrate": "npx prisma migrate dev",
+    "prisma-deploy-migrate": "npx prisma migrate deploy",
+    "prisma-generate": "npx prisma generate",
     "dev": "npx nodemon src/app.ts",
-    "build": "tsc && prisma generate",
-    "start": "node dist/src/app.js"
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,8 +25,8 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "typescript": "^4.7.4",
-    "tsc": "^2.0.4"
+    "nodemon": "^2.0.19",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
