--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "esModuleInterop": true,
     "module": "es6",
     "moduleResolution": "node",
-    "outDir": "dist"
+    "outDir": "dist",
+    "target": "es6",
   },
   "ts-node": {
     "esm": true
